<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_filter"
        android:textColor="@color/color_647c95"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/lnKeyword"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/color_f4f7f9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_keyword" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnProfileNumber"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="13dp"
            android:background="@color/color_f4f7f9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnKeyword">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_profile_number" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>